<resources>
    <string name="app_name">Recado</string>
    <string-array name="spinner_items1">
        <item>Price</item>
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <!-- Add more items as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First_name</string>
    <string name="last_name">Last name</string>
    <string name="favorites">Favorites</string>
    <string name="api">http://192.168.0.11:1001/</string>
    <string name="privacy_statement">By clicking create account, you agree to our <b>Terms and Conditions and Privacy Statement</b></string>
    <string name="restaurant_description">%s - %s</string>
    <string name="guests_num">%d guests</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan">Scan</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="qr">QR</string>
    <string name="history">History</string>
    <string name="account">Account</string>
</resources>