<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/item_liked"
        android:icon="@drawable/saved_selector"
        android:title="@string/saved"
        />

    <item
        android:id="@+id/item_qr"
        android:icon="@drawable/qr_selector"
        android:title="@string/qr"
        />

    <item
        android:id="@+id/item_history"
        android:icon="@drawable/history_selector"
        android:title="@string/history"
        />

    <item
        android:id="@+id/item_account"
        android:icon="@drawable/account_selector"
        android:title="@string/account"
         />
</menu>